--- a/index.html
+++ b/index.html
@@ -426,6 +426,10 @@
           .education-row .vr{
             display: none !important;
           }
+        
+          .education-row > div{
+            margin-bottom: 10px;
+          }
         }
         
         .education-card p {
@@ -2070,3 +2074,4 @@
 
 
 </html>
+
