--- a/index.html
+++ b/index.html
@@ -1840,7 +1840,7 @@
 
                 </div>
             <!-- ------------------------------- Badge section ends here -------------------------------->
-            <section class="container my-3">
+            <section class="container mt-3">
             <div class="custom-card p-4 kaggle-badge-card">
 
                 <h3 class="section-title">Kaggle Badges</h3>
@@ -2253,6 +2253,7 @@
 
 
 </html>
+
 
 
 
